# Icecast-libshout

./: .cvsignore  HACKING  INSTALL  Makefile.am  NEWS  acinclude.m4  autogen.sh  configure.ac  configure.in  libshout.ckport  shout-config.in  shout.pc.in
debian/: watch
doc/: .cvsignore  libshout.xml
examples/: Makefile  Makefile.am  example.c  nonblocking.c
include/: Makefile.am
include/shout/: Makefile.am  shout.h  shout.h.in
src/: .cvsignore  Makefile.am  codec_opus.c  codec_speex.c  codec_theora.c  codec_vorbis.c  connection.c  format_mp3.c  format_ogg.c  format_ogg.h  format_webm.c  mp3.c  ogg.c  opus.c  proto_http.c  proto_icy.c  proto_roaraudio.c  proto_xaudiocast.c  queue.c  shout.c  shout_ogg.h  shout_private.h  speex.c  theora.c  tls.c  util.c  util.h  vorbis.c  webm.c
win32/: libshout.dsp
